
name:                text-ldap
version:             0.0.1.0
synopsis:            Parser and Printer for LDAP text data stream
-- description:
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
                       Text.LDAP.Data
                       Text.LDAP.Parser
                       Text.LDAP.Printer
  -- other-modules:
  build-depends:         base <5
                       , bytestring
                       , containers
                       , transformers
                       , attoparsec
                       , dlist
                       , semigroups
                       , base64-bytestring
  hs-source-dirs:        src
  ghc-options:         -Wall -rtsopts
  ghc-prof-options:    -prof -fprof-auto

executable parseTest
  main-is:             parseTest.hs
  build-depends:         base <5
                       , bytestring
                       , text-ldap
  hs-source-dirs:      mains
  ghc-options:         -Wall -rtsopts
  ghc-prof-options:    -prof -fprof-auto


executable ppTest
  main-is:             ppTest.hs
  build-depends:         base <5
                       , bytestring
                       , text-ldap
  hs-source-dirs:      mains
  ghc-options:         -Wall -rtsopts
  ghc-prof-options:    -prof -fprof-auto
